--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-css": "tailwindcss build src/index.scss -o public/index.scss"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0",
